@@ -1,32 +1,31 @@
 package uk.gov.hmcts.reform.rsecheck.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.validation.ConstraintViolationException;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
+import tools.jackson.databind.ObjectMapper;
+import uk.gov.hmcts.reform.rpts.Application;
 import uk.gov.hmcts.reform.rpts.controllers.AddressController;
 import uk.gov.hmcts.reform.rpts.exceptions.NotFoundException;
 import uk.gov.hmcts.reform.rpts.models.NsplAddress;
 import uk.gov.hmcts.reform.rpts.services.NsplService;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
-import static java.nio.file.Files.readAllBytes;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(AddressController.class)
-@ContextConfiguration(classes = AddressController.class)
+@ContextConfiguration(classes = Application.class)
 @SuppressWarnings("PMD.JUnitTestsShouldIncludeAssert")
 class AddressControllerTest {
 
@@ -41,9 +40,7 @@ class AddressControllerTest {
     @Test
     void shouldFindCourtByQuery() throws Exception {
 
-        final Path path = Paths.get("src/test/resources/nspl_address_example.json");
-        final String expectedJson = new String(readAllBytes(path));
-
+        final Path path = Path.of("src/test/resources/nspl_address_example.json");
         final NsplAddress nsplAddress = new ObjectMapper().readValue(path.toFile(), NsplAddress.class);
         final String query = "PL51AA";
 
@@ -51,7 +48,10 @@ class AddressControllerTest {
 
         mockMvc.perform(get(BASE_URL + query))
             .andExpect(status().isOk())
-            .andExpect(content().json(expectedJson))
+            .andExpect(jsonPath("$.postcode").value(nsplAddress.getPostcode()))
+            .andExpect(jsonPath("$.fourCharLaCode").value(nsplAddress.getFourCharLaCode()))
+            .andExpect(jsonPath("$.nineCharLaCode").value(nsplAddress.getNineCharLaCode()))
+            .andExpect(jsonPath("$.addresses.length()").value(nsplAddress.getAddresses().size()))
             .andReturn();
     }
 
@@ -60,9 +60,11 @@ class AddressControllerTest {
         try {
             mockMvc.perform(get(BASE_URL + "abc123")).andReturn();
         } catch (Exception e) {
-            assertThrows(ConstraintViolationException.class, () -> {
-                throw e.getCause();
-            });
+            assertThrows(
+                ConstraintViolationException.class, () -> {
+                    throw e.getCause();
+                }
+            );
             assertThat(e.getMessage())
                 .containsPattern("getAddress.postcode: Provided postcode is not valid");
         }
@@ -79,9 +81,11 @@ class AddressControllerTest {
         try {
             mockMvc.perform(get(BASE_URL + query)).andExpect(status().isNotFound());
         } catch (Exception e) {
-            assertThrows(NotFoundException.class, () -> {
-                throw e.getCause();
-            });
+            assertThrows(
+                NotFoundException.class, () -> {
+                    throw e.getCause();
+                }
+            );
             assertThat(e.getMessage())
                 .containsPattern("uk.gov.hmcts.reform.rpts.exceptions.NotFoundException: Not found: PL51AA");
         }
